I don't actually know. I think I fixed menu spacing?

--- a/css/catapult.css
+++ b/css/catapult.css
@@ -66,14 +66,16 @@ ul.menu {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-around;
   }
 }
 ul.menu li.menu-item {
-  padding: 0.2em;
+  font-size: +120%;
+  padding: 0.3em;
 }
 @media screen and (min-width: 900px) {
   ul.menu li.menu-item {
-    padding: 0 1em;
+    margin: 0 0.4em;
   }
 }
 ul.menu a {
@@ -121,7 +123,15 @@ iframe#hero-image {
  */
 .region-block-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+}
+@media screen and (min-width: 900px) {
+  .region-block-row {
+    flex-direction: row;
+  }
+  .region-block-row .block {
+    flex: calc(100 / 3) 0 0;
+  }
 }
 
 /*
