--- a/css/layout.css
+++ b/css/layout.css
@@ -23,9 +23,7 @@
  *
  */
 #header .region-header {
-  padding-bottom: 1em;
-  border-bottom: 1px solid black;
-  margin: 1em 0 0;
+  margin: 1em 0;
 }
 @media screen and (min-width: 900px) {
   #header .region-header {
@@ -37,7 +35,7 @@
 #block-catapult-branding {
   min-height: 65px;
   display: flex;
-  flex: 1 0 0;
+  min-width: fit-content;
 }
 #block-catapult-branding img {
   display: block;
@@ -57,6 +55,5 @@
  *
  */
 #block-catapult-main-menu {
-  flex: 2 0 0;
-  margin: 0 1em;
+  flex: 1;
 }
